<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/layout_header"/>

    <com.mhysa.waimai.kuaidi.ui.customerviews.EditTextLayout
        android:id="@+id/layout_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/old_password_hint"
        app:icon="@mipmap/ic_write"
        app:showLeft="false"
        app:showRight="false"/>

    <com.mhysa.waimai.kuaidi.ui.customerviews.EditTextLayout
        android:id="@+id/layout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/new_password_hint"
        app:icon="@mipmap/ic_password"
        app:showLeft="false"
        app:showRight="false"/>

    <com.mhysa.waimai.kuaidi.ui.customerviews.EditTextLayout
        android:id="@+id/layout_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/confirm_new_password_hint"
        app:icon="@mipmap/ic_password"
        app:showLeft="false"
        app:showRight="false"/>

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_register"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="15sp"/>
</LinearLayout>