<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:clipToPadding="true"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/layout_header"/>

    <com.mhysa.waimai.kuaidi.ui.customerviews.EditTextLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:hint="@string/phone_hint"
        app:icon="@mipmap/ic_phone"
        app:showLeft="false"
        app:showRight="false"/>

    <com.mhysa.waimai.kuaidi.ui.customerviews.EditTextLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hint="@string/password_hint"
        app:icon="@mipmap/ic_password"
        app:showLeft="false"
        app:showRight="false"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_register"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/layout_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register_now"
                android:textColor="#2196f3"
                android:textSize="13sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/forget_password"
                android:textColor="#2196f3"
                android:textSize="13sp"/>
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>