<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        android:background="@color/navigation_bg">

        <RelativeLayout
            android:id="@+id/layout_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@mipmap/ic_back"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/search"
            android:textColor="@color/title_color"
            android:textSize="@dimen/title_size"/>

        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/reset"
            android:textColor="#2196f3"
            android:textSize="13sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_divider_height"
            android:layout_alignParentBottom="true"
            android:background="@color/title_divider_color"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_header"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_order_status"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_choose_item">

                <TextView
                    android:id="@+id/tv_order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/order_status"
                    android:textColor="#989898"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/iv_order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_arrow_down"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_order_status_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:background="@drawable/bg_choose_item_without_top"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_status"
                    android:textColor="#989898"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_success"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_status_buy_success"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_taken"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_status_taken"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_taking"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_status_taking"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_onroad"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_status_on_road"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_finished"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_status_finished"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/layout_start_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_choose_item">

                    <TextView
                        android:id="@+id/tv_start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/start_time"
                        android:textColor="#989898"
                        android:textSize="15sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/ic_calendar"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/layout_end_time"
                    android:layout_width="0dp"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_choose_item">

                    <TextView
                        android:id="@+id/tv_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:text="@string/end_time"
                        android:textColor="#989898"
                        android:textSize="15sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/ic_calendar"/>

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_pay_type"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_choose_item">

                <TextView
                    android:id="@+id/tv_pay_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/pay_type"
                    android:textColor="#989898"
                    android:textSize="15sp"/>

                <ImageView
                    android:id="@+id/iv_pay_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/ic_arrow_up"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_pay_type_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:background="@drawable/bg_choose_item_without_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/pay_type"
                    android:textColor="#989898"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_paytype_visa"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="visa"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_paytype_paypal"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="paypal"
                    android:textColor="#333333"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/tv_paytype_balance"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/balance"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_paytype_apple_pay"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="apple pay"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_paytype_credit_card"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/credit_card"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/tv_paytype_cash"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/pay_in_cash"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_choose_item">

                <EditText
                    android:id="@+id/et_order"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/order_number_hint"
                    android:textColor="#989898"
                    android:textSize="15sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_choose_item">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:textColor="#989898"
                    android:textSize="15sp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#2196f3"
        android:gravity="center"
        android:text="@string/confirm_search"
        android:textColor="@color/white"
        android:textSize="15sp"/>


</RelativeLayout>